# hayes

./: .gitignore  Cargo.toml  README.md
crates/hayes/: Cargo.toml
crates/hayes/src/: error.rs  lib.rs
crates/hayes/src/impls/: mod.rs  option.rs
crates/hayes/src/impls/primitive/: bool.rs  int.rs  mod.rs  str.rs  uint.rs
crates/hayes_derive/: Cargo.toml
examples/: simple.rs
