[package]
name = "hayes"
version = "0.1.0"
categories = ["embedded", "no-std", "no-std::no-alloc"]
keywords = ["at", "no-std", "no-alloc"]
description = "A lightweight AT command parser and generator for embedded systems"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jack-weilage/hayes"

[dependencies]
hayes_derive = { path = "../hayes_derive", optional = true }

defmt = { version = "1.0.1", optional = true }
heapless = { version = "0.9.1", optional = true }

[features]
# Provides derive(Command, Response) macros
derive = ["hayes_derive"]
# Provides defmt support for exported types
defmt = ["dep:defmt"]
# Provides impls for heapless types like String<N> and Vec<T, N>.
heapless = ["dep:heapless"]
